--- a/index.html
+++ b/index.html
@@ -1,69 +1,193 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Balaji Bags | Premium BOPP Carry Bag Manufacturer</title>
+  <title>Balaji Bags | International Premium BOPP Carry Bags</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
     *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif}
-    body{background:#050505;color:#fff;overflow-x:hidden}
-    header{min-height:100vh;display:flex;align-items:center;justify-content:center;text-align:center;background:radial-gradient(circle at top,#1b2cff,#000 60%)}
-    header::after{content:'';position:absolute;inset:0;background:url('https://images.unsplash.com/photo-1520975916090-3105956dac38') center/cover;opacity:0.15}
-    .hero{position:relative;z-index:2;max-width:900px;padding:20px}
-    .hero h1{font-size:3.5rem;font-weight:700;letter-spacing:1px}
-    .hero p{margin:20px 0;font-size:1.2rem;color:#d0d0ff}
-    .btn{display:inline-block;margin:10px;padding:14px 32px;border-radius:40px;background:linear-gradient(90deg,#4facfe,#00f2fe);color:#000;font-weight:600;text-decoration:none}
-    section{padding:80px 10%}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:40px}
-    .card{background:#0d0d1f;border-radius:20px;padding:30px;box-shadow:0 0 40px rgba(79,172,254,0.15)}
-    .card h3{margin-bottom:15px}
-    footer{text-align:center;padding:40px;background:#000;color:#aaa}
+    body{background:#050505;color:#ffffff;overflow-x:hidden}
+
+    /* HERO SECTION */
+    .hero-section{
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      position:relative;
+      background:radial-gradient(circle at top,#1b2cff,#000 65%);
+    }
+    .hero-section::before{
+      content:'';
+      position:absolute;
+      inset:0;
+      background:linear-gradient(to bottom,rgba(255,255,255,0.15),transparent 40%);
+    }
+    .hero-content{
+      position:relative;
+      z-index:2;
+      text-align:center;
+      max-width:900px;
+      padding:20px;
+      animation:fadeUp 1.4s ease-out;
+    }
+    .hero-content h1{
+      font-size:4rem;
+      letter-spacing:2px;
+      font-weight:700;
+    }
+    .hero-content h2{
+      margin-top:10px;
+      font-weight:400;
+      color:#cfd6ff;
+    }
+    .hero-content p{
+      margin-top:20px;
+      font-size:1.2rem;
+      color:#e0e0ff;
+    }
+    .hero-buttons{
+      margin-top:40px;
+    }
+    .hero-buttons a{
+      display:inline-block;
+      margin:10px;
+      padding:14px 36px;
+      border-radius:50px;
+      background:linear-gradient(90deg,#4facfe,#00f2fe);
+      color:#000;
+      font-weight:600;
+      text-decoration:none;
+      box-shadow:0 0 25px rgba(79,172,254,0.6);
+      transition:transform .3s ease,box-shadow .3s ease;
+    }
+    .hero-buttons a:hover{
+      transform:translateY(-4px);
+      box-shadow:0 0 45px rgba(79,172,254,0.9);
+    }
+
+    /* HERO BAG IMAGE */
+    .hero-bag{
+      margin:60px auto 0;
+      width:260px;
+      animation:floatBag 4s ease-in-out infinite;
+      filter:drop-shadow(0 40px 60px rgba(0,0,0,0.8));
+    }
+
+    /* SECTIONS */
+    section{
+      padding:90px 10%;
+    }
+    .section-title{
+      font-size:2.5rem;
+      margin-bottom:30px;
+      text-align:center;
+    }
+    .about-text{
+      max-width:800px;
+      margin:0 auto;
+      text-align:center;
+      color:#cfcfcf;
+      line-height:1.8;
+    }
+
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+      gap:40px;
+      margin-top:60px;
+    }
+    .card{
+      background:#0d0d1f;
+      border-radius:24px;
+      padding:40px 30px;
+      text-align:center;
+      box-shadow:0 0 40px rgba(79,172,254,0.18);
+      transition:transform .4s ease, box-shadow .4s ease;
+    }
+    .card:hover{
+      transform:translateY(-10px);
+      box-shadow:0 0 70px rgba(79,172,254,0.4);
+    }
+
+    footer{
+      background:#000;
+      padding:40px 20px;
+      text-align:center;
+      color:#999;
+    }
+
+    /* ANIMATIONS */
+    @keyframes fadeUp{
+      from{opacity:0;transform:translateY(40px)}
+      to{opacity:1;transform:translateY(0)}
+    }
+    @keyframes floatBag{
+      0%,100%{transform:translateY(0)}
+      50%{transform:translateY(-18px)}
+    }
+
+    @media(max-width:768px){
+      .hero-content h1{font-size:2.6rem}
+      .hero-content h2{font-size:1.1rem}
+      .hero-bag{width:200px}
+    }
   </style>
 </head>
 <body>
 
-<header>
-  <div class="hero">
-    <h1>Balaji Bags</h1>
-    <p>Premium BOPP Carry Bag Manufacturer | Designed to Impress</p>
-    <a href="tel:7992413853" class="btn">Call Now</a>
-    <a href="https://wa.me/917992413853" class="btn">WhatsApp</a>
+  <!-- HERO -->
+  <div class="hero-section">
+    <div class="hero-content">
+      <h1>BALAJI BAGS</h1>
+      <h2>Jo Brand Ko, Brand Bana De</h2>
+      <p>Premium BOPP Carry Bag Manufacturer | Made for Retail, Wholesale & Export</p>
+
+      <!-- HERO BAG IMAGE (replace src later) -->
+      <img src="https://images.unsplash.com/photo-1600180758890-6b94519a8ba6" alt="Balaji Bags Premium Carry Bag" class="hero-bag">
+
+      <div class="hero-buttons">
+        <a href="tel:7992413853">Get Quote</a>
+        <a href="https://wa.me/917992413853">WhatsApp Us</a>
+      </div>
+    </div>
   </div>
-</header>
 
-<section>
-  <h2>About Us</h2>
-  <p style="max-width:700px;margin-top:20px">Balaji Bags is a leading manufacturer of premium quality BOPP carry bags based in Motipur. We specialize in futuristic designs, strong material, and high-quality printing that helps brands stand out.</p>
-</section>
+  <!-- ABOUT -->
+  <section>
+    <h2 class="section-title">About Balaji Bags</h2>
+    <p class="about-text">
+      Balaji Bags is a premium BOPP carry bag manufacturer based in Motipur, India. We don't just manufacture bags — we help brands stand out with superior material, luxury printing, and export-quality finishing.
+    </p>
+  </section>
 
-<section>
-  <h2>Our Products</h2>
-  <div class="grid" style="margin-top:40px">
-    <div class="card"><h3>BOPP Carry Bags</h3><p>Glossy, strong and premium finish bags</p></div>
-    <div class="card"><h3>Custom Printed Bags</h3><p>Brand-focused designs with high resolution printing</p></div>
-    <div class="card"><h3>Heavy GSM Bags</h3><p>Durable bags suitable for bulk & retail</p></div>
-  </div>
-</section>
+  <!-- PRODUCTS -->
+  <section>
+    <h2 class="section-title">Our Products</h2>
+    <div class="grid">
+      <div class="card">Premium BOPP Carry Bags</div>
+      <div class="card">Custom Printed Brand Bags</div>
+      <div class="card">Heavy GSM & Bulk Order Bags</div>
+      <div class="card">Export Quality Packaging Solutions</div>
+    </div>
+  </section>
 
-<section>
-  <h2>Why Choose Us</h2>
-  <div class="grid" style="margin-top:40px">
-    <div class="card">✔ Manufacturer Direct</div>
-    <div class="card">✔ Premium Material</div>
-    <div class="card">✔ Bulk Orders</div>
-    <div class="card">✔ On-Time Delivery</div>
-  </div>
-</section>
+  <!-- WHY US -->
+  <section>
+    <h2 class="section-title">Why Choose Us</h2>
+    <div class="grid">
+      <div class="card">Manufacturer Direct</div>
+      <div class="card">International Quality Standards</div>
+      <div class="card">On-Time Delivery</div>
+      <div class="card">Trusted by Growing Brands</div>
+    </div>
+  </section>
 
-<section>
-  <h2>Contact Us</h2>
-  <p style="margin-top:20px">📍 Motipur<br>📞 7992413853<br>🌐 www.balajibags.com</p>
-</section>
-
-<footer>
-  © 2026 Balaji Bags. All Rights Reserved.
-</footer>
+  <!-- FOOTER -->
+  <footer>
+    © 2026 Balaji Bags | Motipur | 📞 7992413853 | www.balajibags.com
+  </footer>
 
 </body>
 </html>
