--- a/index.html
+++ b/index.html
@@ -1,193 +1,58 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Balaji Bags | International Premium BOPP Carry Bags</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <style>
-    *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif}
-    body{background:#050505;color:#ffffff;overflow-x:hidden}
-
-    /* HERO SECTION */
-    .hero-section{
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      position:relative;
-      background:radial-gradient(circle at top,#1b2cff,#000 65%);
-    }
-    .hero-section::before{
-      content:'';
-      position:absolute;
-      inset:0;
-      background:linear-gradient(to bottom,rgba(255,255,255,0.15),transparent 40%);
-    }
-    .hero-content{
-      position:relative;
-      z-index:2;
-      text-align:center;
-      max-width:900px;
-      padding:20px;
-      animation:fadeUp 1.4s ease-out;
-    }
-    .hero-content h1{
-      font-size:4rem;
-      letter-spacing:2px;
-      font-weight:700;
-    }
-    .hero-content h2{
-      margin-top:10px;
-      font-weight:400;
-      color:#cfd6ff;
-    }
-    .hero-content p{
-      margin-top:20px;
-      font-size:1.2rem;
-      color:#e0e0ff;
-    }
-    .hero-buttons{
-      margin-top:40px;
-    }
-    .hero-buttons a{
-      display:inline-block;
-      margin:10px;
-      padding:14px 36px;
-      border-radius:50px;
-      background:linear-gradient(90deg,#4facfe,#00f2fe);
-      color:#000;
-      font-weight:600;
-      text-decoration:none;
-      box-shadow:0 0 25px rgba(79,172,254,0.6);
-      transition:transform .3s ease,box-shadow .3s ease;
-    }
-    .hero-buttons a:hover{
-      transform:translateY(-4px);
-      box-shadow:0 0 45px rgba(79,172,254,0.9);
-    }
-
-    /* HERO BAG IMAGE */
-    .hero-bag{
-      margin:60px auto 0;
-      width:260px;
-      animation:floatBag 4s ease-in-out infinite;
-      filter:drop-shadow(0 40px 60px rgba(0,0,0,0.8));
-    }
-
-    /* SECTIONS */
-    section{
-      padding:90px 10%;
-    }
-    .section-title{
-      font-size:2.5rem;
-      margin-bottom:30px;
-      text-align:center;
-    }
-    .about-text{
-      max-width:800px;
-      margin:0 auto;
-      text-align:center;
-      color:#cfcfcf;
-      line-height:1.8;
-    }
-
-    .grid{
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-      gap:40px;
-      margin-top:60px;
-    }
-    .card{
-      background:#0d0d1f;
-      border-radius:24px;
-      padding:40px 30px;
-      text-align:center;
-      box-shadow:0 0 40px rgba(79,172,254,0.18);
-      transition:transform .4s ease, box-shadow .4s ease;
-    }
-    .card:hover{
-      transform:translateY(-10px);
-      box-shadow:0 0 70px rgba(79,172,254,0.4);
-    }
-
-    footer{
-      background:#000;
-      padding:40px 20px;
-      text-align:center;
-      color:#999;
-    }
-
-    /* ANIMATIONS */
-    @keyframes fadeUp{
-      from{opacity:0;transform:translateY(40px)}
-      to{opacity:1;transform:translateY(0)}
-    }
-    @keyframes floatBag{
-      0%,100%{transform:translateY(0)}
-      50%{transform:translateY(-18px)}
-    }
-
-    @media(max-width:768px){
-      .hero-content h1{font-size:2.6rem}
-      .hero-content h2{font-size:1.1rem}
-      .hero-bag{width:200px}
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Balaji Bags</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- HERO -->
-  <div class="hero-section">
-    <div class="hero-content">
-      <h1>BALAJI BAGS</h1>
-      <h2>Jo Brand Ko, Brand Bana De</h2>
-      <p>Premium BOPP Carry Bag Manufacturer | Made for Retail, Wholesale & Export</p>
+<header class="navbar">
+    <h1>Balaji Bags</h1>
+    <nav>
+        <a href="#products">Products</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
 
-      <!-- HERO BAG IMAGE (replace src later) -->
-      <img src="https://images.unsplash.com/photo-1600180758890-6b94519a8ba6" alt="Balaji Bags Premium Carry Bag" class="hero-bag">
+<section class="hero">
+    <h2>Premium Bags for Every Journey</h2>
+    <p>Style • Strength • Trust</p>
+    <button onclick="scrollToProducts()">Explore Collection</button>
+</section>
 
-      <div class="hero-buttons">
-        <a href="tel:7992413853">Get Quote</a>
-        <a href="https://wa.me/917992413853">WhatsApp Us</a>
-      </div>
+<section id="products" class="products">
+    <h2>Our Collection</h2>
+    <div class="product-grid">
+        <div class="card">Travel Bags</div>
+        <div class="card">School Bags</div>
+        <div class="card">Office Bags</div>
+        <div class="card">Hand Bags</div>
     </div>
-  </div>
+</section>
 
-  <!-- ABOUT -->
-  <section>
-    <h2 class="section-title">About Balaji Bags</h2>
-    <p class="about-text">
-      Balaji Bags is a premium BOPP carry bag manufacturer based in Motipur, India. We don't just manufacture bags — we help brands stand out with superior material, luxury printing, and export-quality finishing.
+<section id="about" class="about">
+    <h2>About Us</h2>
+    <p>
+        Balaji Bags provides high quality, durable and stylish bags
+        for daily use and long journeys.
     </p>
-  </section>
+</section>
 
-  <!-- PRODUCTS -->
-  <section>
-    <h2 class="section-title">Our Products</h2>
-    <div class="grid">
-      <div class="card">Premium BOPP Carry Bags</div>
-      <div class="card">Custom Printed Brand Bags</div>
-      <div class="card">Heavy GSM & Bulk Order Bags</div>
-      <div class="card">Export Quality Packaging Solutions</div>
-    </div>
-  </section>
+<section id="contact" class="contact">
+    <h2>Contact Us</h2>
+    <input type="text" placeholder="Your Name">
+    <input type="email" placeholder="Email">
+    <textarea placeholder="Message"></textarea>
+    <button>Send</button>
+</section>
 
-  <!-- WHY US -->
-  <section>
-    <h2 class="section-title">Why Choose Us</h2>
-    <div class="grid">
-      <div class="card">Manufacturer Direct</div>
-      <div class="card">International Quality Standards</div>
-      <div class="card">On-Time Delivery</div>
-      <div class="card">Trusted by Growing Brands</div>
-    </div>
-  </section>
+<footer>
+    © 2026 Balaji Bags. All Rights Reserved.
+</footer>
 
-  <!-- FOOTER -->
-  <footer>
-    © 2026 Balaji Bags | Motipur | 📞 7992413853 | www.balajibags.com
-  </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
